tests/baselines/reference/parseUnmatchedTypeAssertion.errors.txt
parseUnmatchedTypeAssertion.ts(1,2): error TS1109: Expression expected.
parseUnmatchedTypeAssertion.ts(1,12): error TS1141: String literal expected.
parseUnmatchedTypeAssertion.ts(1,12): error TS2304: Cannot find name 'obju2c77'.
parseUnmatchedTypeAssertion.ts(1,21): error TS1109: Expression expected.
parseUnmatchedTypeAssertion.ts(2,1): error TS1005: '{' expected.


==== parseUnmatchedTypeAssertion.ts (5 errors) ====
    @<[[import(obju2c77,
     ~
!!! error TS1109: Expression expected.
               ~~~~~~~~
!!! error TS1141: String literal expected.
               ~~~~~~~~
!!! error TS2304: Cannot find name 'obju2c77'.
                        
!!! error TS1109: Expression expected.
    
    
!!! error TS1005: '{' expected.
!!! related TS1007 parseUnmatchedTypeAssertion.ts:2:1: The parser expected to find a '}' to match the '{' token here.